@@ -452,6 +452,10 @@
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
           <skip>true</skip>
+          <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
